style.css
* {
    overflow-x:hidden;
    
}

a {
    text-decoration: none;
    color:black;
}

#logo {
    position: absolute;
    width:15vw;
    top:50%;
    left:50%;
    transform:translate(-50%,-50%);
    cursor:crosshair;
}


/*Added so we donn't need store-container-top



*/
header{
    display: block;
    top:0px;
    height: 35px;
    width: 100%;
    margin-bottom: 10vw;
    
}

#info {
    position:absolute;
    width:95vw;
    top:96%;
    left:50%;
    transform:translate(-50%,-50%);
    display:none;
}

#info p {
    font-family: Helvetica;
    font-size: 11px;
}

button{
    font-size: 11px;
    font-family: Helvetica;
    position:fixed;
    background-color: white;
    border: 0.3px black solid;
    border-radius: 15px;
    margin-top: 5px;
    padding:5px;
    width:50px;
    cursor:pointer;
    transition:color 0.3s;
}

button:hover{
    color:rgb(70, 70, 70);
}

#button_home {
    left:20px;
    z-index: 1;
    background-color: white;
}
   
#button_work{
    left:20px;
    z-index: 1;
    background-color: white;
    
}

#button_store {
    float:right;
    right:90px;
    z-index: 1;
    background-color: white;
    
}

#button_about {
    float:right;
    right:20px;
    z-index: 1;
    background-color: white;
    
}

#button_cart {
    float:right;
    right:20px;
    bottom:20px;
    z-index: 10;
    background-color: white;
}

#cart-cont{
    z-index: 2;
    display: block;
    position: fixed;
    width: 30vw;
    min-width: 300px;
    max-width: 80vw;
    min-height: 102vh;
    bottom: 0px;
    right: -80vw;
    overflow-y: scroll;
    background: rgb(233, 226, 226);
    transition-duration: 1s;
    border-left-style: solid;
    border-width: 2.5px;
    border-color: lightgray;
}

#empty-cart{
    font-size: 20px;
    font-family: Helvetica;
    margin-top: 30px;
    margin-left: 22px;
}

.cart-item{
    display: block;
    margin-left: auto;
    margin-right: auto;
    width: 90%;
    
    
    
}

.quantity{
    
    line-height: 45px;
    margin-left: 20px;
   
}

 .item-name-cont{

    font-family: Helvetica;
    height: 45px;
    border-style: solid;
    border-width: 2.5px;
    border-color: lightgray;
    
    
}
.item-name{
    
    line-height: 45px;
    margin-left: 20px;

}
 .quant-price{

    font-family: Helvetica;
    height: 45px;
    border-style: solid;
    border-top: none;
    
    
    border-width: 2.5px;
    border-color: lightgray;

}

.item-total{
    float: right;
    margin-right: 20px;
    line-height: 45px;
}
.subtotal{
    float: right;   
    font-family: Helvetica;
    margin-top: 30px;
    margin-right: 20px;
}

#store-container-top{
    border-top:1px black solid;
}

.store-container {
    display:flex;
    width: 95vw;
    min-height:25vh;
    border-bottom:1px black solid;
}

.store-info{
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    width: 30vw;
    max-height: 30vh;
    margin-bottom: 5px;
}

#store-wrapper p{
    font-family: Helvetica;
    font-weight: 200;
    font-size: 0.7vw;
}


.store-images img {
    max-width:160px;
    padding:15px;

}

.store-top{
    display: flex;
    justify-content: space-between;
    line-height: 8vh;
}

.store-center{
    display: flex;
    justify-content: space-between;
    line-height: 8vh;
}

.store-bottom{
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    line-height: 8vh;
}

.store-bottom button {
    position: relative;
    width:70px;
    font-size: 0.7vw;
    font-weight: 200;
    z-index:1;
}

.store-images-cont{
    display: block;
    width: 100%;
    min-height:25vh;
    

}

.store-images {
    display: flex;
    justify-content: flex-end;
    flex-wrap: wrap;
    float: right;
    max-width: 50vw;
    
   
    
}

.store-images img {
    min-width: 75px;
    max-width:160px;
    max-height:160px;
    padding:15px;

}


/* WORKS PAGE */

#grid-wrapper {
    position:relative;
    top:100px;
    z-index: -1;
}

#work-container {
    display: grid; 
    grid-template-columns: repeat(2, 1fr); 
    grid-template-rows: repeat(6, 1fr); 
    grid-column-gap: 5px;
    grid-row-gap: 100px;
}

#work-container #div1 { grid-area: 1 / 1 / 2 / 2; max-width:100%;} 
#work-container #div6 { grid-area: 1 / 2 / 2 / 3; max-width:100%;} 
#work-container #div10 { grid-area: 2 / 1 / 3 / 2; max-width:100%;} 
#work-container #div5 { grid-area: 2 / 2 / 3 / 3; max-width:100%;} 
#work-container #div3 { grid-area: 3 / 1 / 4 / 2; max-width:100%;} 
#work-container #div2 { grid-area: 3 / 2 / 4 / 3; max-width:100%;} 
#work-container #div7 { grid-area: 4 / 1 / 5 / 2; max-width:100%;} 
#work-container #div4 { grid-area: 4 / 2 / 5 / 3; max-width:100%;} 
#work-container #div9 { grid-area: 5 / 1 / 6 / 2; max-width:100%;} 
#work-container #div8 { grid-area: 5 / 2 / 6 / 3; max-width:100%;} 
#work-container #div11 {
    grid-area: 6 / 1 / 7 / 3;
    font-family:helvetica;
    font-size:16px;
    font-weight: 200; 
    padding:20px;
}




@media only screen and (max-device-width : 1024px) {

#logo {
    width:30vw;
}

#store-wrapper p{
    font-size: 8px;
}

.store-top {
    justify-content: space-evenly;
}

.store-center {
    justify-content: space-evenly;

}

.store-bottom {
    justify-content: space-evenly;
}

.store-info{
    width: 100vw;
    max-height: 50vh;
    justify-content: flex-start;
}

.store-bottom button {
    font-size: 10px;
    z-index:1;
}

#button:hover {
    color:black;
}

#work-container {
   grid-row-gap: 10px;
   max-height: 300vh;
}

#work-container #div11 {
    font-size: 9px;
}


}

